# burner-net

./: .gitignore  CMakeLists.txt  CMakePresets.json  PRINCIPLES.md  README.md  vcpkg.json
cmake/: BurnerNetConfig.cmake.in  SyncRedist.cmake
docs/: BINARY_STEALTH_AUDIT.md  CMAKE_INTEGRATION.md  HARDEN_IMPORTS_DEBUG_REPORT.md  LINUX_USAGE.md  SECURITY_AUDIT_GOALS.md  USAGE_BEST_PRACTICES.md  VISUAL_STUDIO_INTEGRATION.md
examples/: 01_basic_usage.cpp  02_security_audit.cpp  02_zero_trust_pipeline.cpp  03_custom_security_policy.cpp  03_traffic_lanes.cpp  04_bootstrap_runtime.cpp  04_custom_security_policy.cpp  05_bootstrap_runtime.cpp  05_mtls_usage.cpp  06_hmac_custom_verifier.cpp  06_hmac_custom_weapon.cpp  07_streamed_descrambler.cpp  08_telemetry_audit.cpp  CMakeLists.txt  main.cpp
examples/cmake-consumer/: CMakeLists.txt  CMakePresets.json  README.md  cmake-consumer.cpp  cmake-consumer.h  vcpkg.json
examples/vs-consumer/: README.md  vs-consumer.cpp  vs-consumer.sln  vs-consumer.vcxproj  vs-consumer.vcxproj.filters
include/burner/net/: bootstrap.h  builder.h  concepts.h  config_bridge.h  error.h  export.h  http.h  obfuscation.h  obfuscation_config.h.in  policy.h  security_auditor.h  signature_verifier.h  version.h  version.h.in
include/burner/net/detail/: constexpr_obfuscation.h  dark_allocator.h  dark_arithmetic.h  dark_callables.h  dark_hash_utils.h  dark_hashing.h  dark_simd.h  hostile_imports.h  kernel_resolver.h  memory_hygiene.h  pointer_mangling.h  polymorphic_error.h  wiping_alloc_engine.h
src/: builder.cpp  error.cpp  error_strings.h  http_factory.cpp
src/bootstrap/: bootstrap_windows.cpp
src/curl/: curl_api.h  curl_http_client.cpp  curl_http_client.h  curl_http_client_callbacks.cpp  curl_http_client_internal.h  curl_http_client_options.cpp  curl_session.cpp  curl_session.h  transport_orchestrator.cpp  transport_orchestrator.h
src/detail/: hostile_imports.h  memory_hygiene.cpp  wiping_alloc_engine.cpp
src/internal/: header_validation.cpp  header_validation.h  hostile_imports.h  import_pointer_trust.cpp  import_pointer_trust.h  openssl_api.h  openssl_sync.cpp  openssl_sync.h
src/security/: security_auditor.cpp  signature_verifier.cpp
templates/: BurnerNet_Config.example.h  BurnerNet_SecurityPolicy.example.h
tests/: BurnerNet_TestConfig.h  check_burner_generator.py  integration_tests.cpp  test_main.cpp  unit_tests.cpp
tools/: generate_config.py
